<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_team_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:text="@string/tv_team_details_team_title"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_team_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/tv_team_details_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_team_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        android:inputType="text"
        android:text="Brighton and Hove Albion" />

    <TextView
        android:id="@+id/tv_team_details_founded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Fundado"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_team_details_founded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        android:text="20-12-176" />

    <TextView
        android:id="@+id/tv_team_details_champions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Campeoñes"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_team_details_champions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="true" />

    <TextView
        android:id="@+id/tv_team_details_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Puntos"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_team_details_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="8" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_back" />


        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_delete" />

    </LinearLayout>

</LinearLayout>